--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 /*////////////////////////// NAV BAR SECTION ///////////////////////*/
 #navbar {
     display: grid;
-    grid-template-columns: 50px 50px 1fr 50px 50px 50px 50px;
+    grid-template-columns: 55px 55px 1fr 55px 55px 55px 70px;
     grid-row: 50px;
     grid-template-areas: "about store . gmail image menu signin" ;
     /*this creates a grid system that can be used to organize a built from scratch navbar */
@@ -19,6 +19,10 @@ a {
     /* this removes the underline */
     font-family: arial, sans-serif;
     font-size: 14px;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 #about {
@@ -56,6 +60,11 @@ a {
     grid-area: signin;
     justify-self: center;
     align-self: center;
+    background-color: rgb(113, 156, 235);
+    border-radius: 3px;
+    padding: 8px;
+    color: white;
+    
 }
 
 /*////////////////////////// MAIN BODY //////////////////////////*/
@@ -88,7 +97,8 @@ a {
     height: 35px;
     justify-self: center;
     align-self: center;
-    width: 160%;
+    max-width: 140%;
+    min-width: 120%;
 }
 
 #search:hover {
@@ -107,14 +117,14 @@ a {
     font-size: 14px;
     background-color: #f8f9fa;
     color: rgb(78, 77, 77);
-    padding-right: ;
+    margin: 10px;
+    padding: 8px;
+    border-radius: 3px;
 }
 
 #google-search-btn:hover {
     border: 1px solid rgb(224, 222, 222);
-    border-radius: 4px;
-    padding: 8px;
-    box-shadow: 1px 1px 5px rgb(218, 216, 216);
+  
 }
 
 #random-search-btn {
@@ -123,13 +133,15 @@ a {
     font-size: 14px;
     background-color: #f8f9fa;
     color: rgb(78, 77, 77);
+    margin: 10px;
+    padding: 8px;
+    border-radius: 3px;
 }
 
 #random-search-btn:hover {
     border: 1px solid rgb(224, 222, 222);
-    border-radius: 4px;
-    padding: 8px;
-    box-shadow: 1px 1px 5px rgb(218, 216, 216);
+    
+    
 }
 
 
